// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateOutputMappings disabling keys 1`] = `
Array [
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;

exports[`generateOutputMappings non keylayout mapping 1`] = `
Array [
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "left_shift",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "b",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "left_control",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "c",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "left_command",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "d",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "left_option",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;

exports[`generateOutputMappings shell command 1`] = `
Array [
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "shell_command": "foo",
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;

exports[`generateOutputMappings with modifiers 1`] = `
Array [
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "b",
            "modifiers": Array [
              "left_command",
            ],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;

exports[`generateOutputMappings with one multi-key trigger 1`] = `
Array [
  Object {
    "description": "Layer layer0",
    "manipulators": Array [
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_x",
            "type": "variable_unless",
            "value": 1,
          },
          Object {
            "name": "trigger_y",
            "type": "variable_unless",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "x",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_x",
              "value": 1,
            },
          },
        ],
        "to_after_key_up": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_x",
              "value": 0,
            },
          },
        ],
        "to_if_alone": Array [
          Object {
            "key_code": "0",
            "modifiers": Array [],
          },
        ],
        "type": "basic",
      },
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_x",
            "type": "variable_unless",
            "value": 1,
          },
          Object {
            "name": "trigger_y",
            "type": "variable_unless",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "y",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_y",
              "value": 1,
            },
          },
        ],
        "to_after_key_up": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_y",
              "value": 0,
            },
          },
        ],
        "to_if_alone": Array [
          Object {
            "key_code": "0",
            "modifiers": Array [],
          },
        ],
        "type": "basic",
      },
    ],
  },
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_x",
            "type": "variable_if",
            "value": 1,
          },
          Object {
            "name": "trigger_y",
            "type": "variable_if",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "1",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;

exports[`generateOutputMappings with two single triggers 1`] = `
Array [
  Object {
    "description": "Layer layer0",
    "manipulators": Array [
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_x",
            "type": "variable_unless",
            "value": 1,
          },
          Object {
            "name": "trigger_y",
            "type": "variable_unless",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "x",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_x",
              "value": 1,
            },
          },
        ],
        "to_after_key_up": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_x",
              "value": 0,
            },
          },
        ],
        "to_if_alone": Array [
          Object {
            "key_code": "0",
            "modifiers": Array [],
          },
        ],
        "type": "basic",
      },
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_x",
            "type": "variable_unless",
            "value": 1,
          },
          Object {
            "name": "trigger_y",
            "type": "variable_unless",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "y",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_y",
              "value": 1,
            },
          },
        ],
        "to_after_key_up": Array [
          Object {
            "set_variable": Object {
              "name": "trigger_y",
              "value": 0,
            },
          },
        ],
        "to_if_alone": Array [
          Object {
            "key_code": "0",
            "modifiers": Array [],
          },
        ],
        "type": "basic",
      },
    ],
  },
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_x",
            "type": "variable_if",
            "value": 1,
          },
          Object {
            "name": "trigger_y",
            "type": "variable_unless",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "1",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
      Object {
        "conditions": Array [
          Object {
            "name": "trigger_y",
            "type": "variable_if",
            "value": 1,
          },
          Object {
            "name": "trigger_x",
            "type": "variable_unless",
            "value": 1,
          },
        ],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "1",
            "modifiers": Array [],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;

exports[`generateOutputMappings without triggers 1`] = `
Array [
  Object {
    "description": "Layer layer1",
    "manipulators": Array [
      Object {
        "conditions": Array [],
        "from": Object {
          "key_code": "a",
          "modifiers": Object {
            "mandatory": Array [],
            "optional": Array [
              "any",
            ],
          },
        },
        "to": Array [
          Object {
            "key_code": "b",
            "modifiers": Array [],
          },
          Object {
            "key_code": "b",
            "modifiers": Array [
              "shift",
            ],
          },
        ],
        "to_after_key_up": Array [],
        "to_if_alone": Array [],
        "type": "basic",
      },
    ],
  },
]
`;
